perubahan warna dari white ke lightgrey

--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .logo{
-  color: white;
+  color: lightgray;
   font-family: 'Birthstone', cursive;
   font-size: 28px;
   padding-top: 10px;
